Connected to backend

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         
     </body>
     <script>
-        var backend_url = "http://127.0.0.1:8081";
+        var backend_url = "https://mehul-xmeme-backend.herokuapp.com/";
         function getMemes()
         {
             $.ajax( {
