--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         
     </body>
     <script>
-        // var backend_url = "https://mehul-xmeme-backend.herokuapp.com";
-        var backend_url = "http://127.0.0.1:8081";
+        var backend_url = "https://mehul-xmeme-backend.herokuapp.com";
+        // var backend_url = "http://127.0.0.1:8081";
 
         // Id of division to be edited
         var div_id = "";
